Visitor maps at 127.0.0.1/Stats

--- a/OutworldzFiles/Apache/htdocs/Stats/Map.htm
+++ b/OutworldzFiles/Apache/htdocs/Stats/Map.htm
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head>
 <!--  author - Fred Beckhusen -->
 <!--  AGPL3.0  https://opensource.org/licenses/AGPL -->
@@ -152,7 +152,7 @@ $(document).ready(function () {
         var xsize = tsv.xsize;
         var ysize = tsv.ysize;
 
-		var mapimage = '/Stats/map/map-' + xsize/256 + '-' + tsv.XCoord + '-' + tsv.YCoord + '-objects.jpg' ;
+        var mapimage = '/Stats/maps/' + tsv.sim + '.jpg' ;
 
         jQuery.each(tsv.data, function (name, line) {
 
