--- a/OutworldzFiles/Apache/htdocs/Stats/Map.htm
+++ b/OutworldzFiles/Apache/htdocs/Stats/Map.htm
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head>
 <!--  author - Fred Beckhusen -->
 <!--  AGPL3.0  https://opensource.org/licenses/AGPL -->
@@ -102,6 +102,7 @@ var person;
 
 $(document).ready(function () {
 
+    //$("#datepicker1").datepicker("setDate", "-10");
     $("#datepicker1").datepicker();
     $("#datepicker2").datepicker();
     $("#timepicker1").timepicker({
@@ -119,14 +120,12 @@ $(document).ready(function () {
     } else {
         sim = 'Welcome';
     }
-
+	
+	var nodate;
     what = gup("Start");
     if (what.length > 0) {
         start = what;
-    } else {
-		start = (addMonths(new Date(date.getFullYear()),-1).toString());
-		start = start.toLocaleDateString("en-US", { month: 'numeric' }) + '/' +  start.toLocaleDateString("en-US", { day: 'numeric' }) + "/" + start.toLocaleDateString("en-US", { year: 'numeric' }) 
-    }
+    } 
 
     var end;
     what = gup("End");
@@ -143,17 +142,16 @@ $(document).ready(function () {
         person = '';
     }
 
-
-
     $.get('/stats/simvisit.plx?q=' + escape(sim) + '&Start=' + escape(start) + '&End=' + escape(end) + '&person=' + person , null, function (tsv, stat, xhr) {
 
         $("#status").append(tsv.text);
 
-        $("#datepicker1").val(tsv.s);
-        $("#datepicker2").val(tsv.e);
+		
+        $("#datepicker1").val(tsv.start);
+        $("#datepicker2").val(tsv.end);
 
-        $("#datepicker1").datepicker();
-        $("#datepicker2").datepicker();
+        //$("#datepicker1").datepicker();				
+        //$("#datepicker2").datepicker();
 
         $("#mySelect").val(tsv.sim);
 
