Maps are shown in Menu

--- a/OutworldzFiles/Apache/htdocs/DreamGrid/index.html
+++ b/OutworldzFiles/Apache/htdocs/DreamGrid/index.html
@@ -19,12 +19,9 @@ Map examples:
 -->
  
 <ul>
-  <li>Metropolis-style <a href="/Search">Search</a>
-  <li>Metropolis-style <a href="/Metromap/map.php">Map</a>
-  <li>Metropolis-style <a href="/Metromap/mapmax.php">Large Map</a>
-  <li>Metropolis-style <a href="/Metromap/index.php">Map Framed</a>
-  <li>Metropolis-style <a href="/Metromap/indexmax.php">Large Map Framed</a>
-</ul>
+  <li><a href="/Search">Search</a>
+  <li><a href="/Metromap/map.php">Map</a>
+  ul>
 
 <!--
  <form action="/Search/Classifieds.htm" method="post">
