Add nerw map to web page

--- a/OutworldzFiles/Apache/htdocs/DreamGrid/index.html
+++ b/OutworldzFiles/Apache/htdocs/DreamGrid/index.html
@@ -1,29 +1,18 @@
 <html>
  <head>
-  <title>PHP, Map,  and Apache Test Pages</title>
+  <title>PHP, Map, and Apache Test Pages</title>
   <link rel="shortcut icon" href="/favicon.ico">
  </head>
  <body>
 
-<!-- 
-<p>
-Divi Wifi Pages: <a href="http://localhost:8002">http://localhost:8002</a>
-</p>
-
-<p>
-    Search: <a href="http://localhost/Search">http://localhost:80/Search</a>
-</p>
-<p>
-Map examples:
-</p>
--->
  
 <ul>
   <li><a href="/Search">Search</a>
-  <li><a href="/Metromap/map.php">Map</a>
-  ul>
+  <li><a href="/Metromap/map.php">Map 1</a>
+  <li><a href="/wifi/map.htm">Map 2</a>
+</ul>
 
-<!--
+
  <form action="/Search/Classifieds.htm" method="post">
     <input type="Submit" name="Classified" value = "Create Classified Ad">
 </form>
@@ -42,7 +31,6 @@ Map examples:
 <form action="/Search/SearchObjects.php" method="post">
     <input type="Submit" name="Objects" value = "Dump Objects">
 </form>
--->
         
         
  </body>
