Comment out  link to global map

--- a/OutworldzFiles/Opensim/WifiPages-White/splash.html
+++ b/OutworldzFiles/Opensim/WifiPages-White/splash.html
@@ -21,7 +21,7 @@
 
         <div class="right-nav-divider"></div>
 		<ul>
-		  <li><a href="/wifi/map.html">GLOBAL MAP</a></li>
+		  <!--<li><a href="/wifi/map.html">GLOBAL MAP</a></li>-->
 		</ul>
         <!--#call method=GetAddonsMenu -->
         <br />
